Working template blog

--- a/_config.yml
+++ b/_config.yml
@@ -5,7 +5,7 @@ url: http://schoewilliam.fr
 
 author: William Dorffer aka. Schoewilliam
 description: Open web enthusiast, non-writer writer, Iceland dreamer.
-title: Schoewilliam
+title: reify
 
 permalink: /:year/:month/:day/:title.html
 markdown: kramdown
