--- a/_data/translations.yml
+++ b/_data/translations.yml
@@ -1,4 +1,4 @@
-en:
+
   about: "About"
   allposts: "All posts"
   archive: "Archive"
@@ -10,17 +10,5 @@ en:
   nextpost: "Next post"
   onthispage: "On this page"
   previouspost: "Previous post"
-  whatido: "What I do"
-fr:
-  about: "À Propos"
-  allposts: "Tous les articles"
-  archive: "Archives"
-  categories: "Catégories"
-  contact: "Me Contacter"
-  lastpost: "Dernier article"
-  lights: "Allumer/Éteindre la lumière"
-  moreposts: "Tous les articles"
-  nextpost: "Article suivant"
-  onthispage: "Sur cette page"
-  previouspost: "Article précédent"
-  whatido: "Ce que je fais"
+  whatido: "What we do"
+
