Most of the work done for the day !!

--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,13 @@
 ## Configuration file
 
-name: Schoewilliam
-url: http://schoewilliam.fr
+name: reify
+url: http://reifycode.github.io
 
-author: William Dorffer aka. Schoewilliam
-description: Open web enthusiast, non-writer writer, Iceland dreamer.
+author: 
+- Shreyash Patodia
+- Pulkit Agarwal
+- Yash Karnawat
+description: Open web enth
 title: reify
 
 permalink: /:year/:month/:day/:title.html
@@ -14,25 +17,15 @@ gems:
   - jekyll-redirect-from
 
 defaults:
-  -
-    scope:
-      path: ""
-    values:
-      lang: fr
-      layout: default
-  -
     scope:
       path: _posts/en
     values:
       lang: en
+      layout: default
 
 
 nodes:
-- text: diaspora*
-  url: https://diaspora-fr.org/u/schoewilliam
 - text: Github
-  url: https://github.com/Schoewilliam
-- text: Mozillians
-  url: https://mozillians.org/en-US/u/schoewilliam/
-- text: GNU Social
-  url: https://status.vinilox.eu/schoewilliam
+  url: https://github.com/reifycode
+
+
