--- a/_data/nav.yml
+++ b/_data/nav.yml
@@ -7,7 +7,7 @@ projects:
   url:   "/projects"
 weblog:
   title: "Blog"
-  url:   "/en/archive"
+  url:   "/archive"
 contact:
   title: "Contact"
   url:   "/about#contact"
