Final touches to author part in posts

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -11,6 +11,7 @@ shreyashpatodia:
     name: Shreyash Patodia
     avatar: /images/layout/photos/shreyash.png
     email: patodiashreyash32@gmail.com
+    facebook: https://www.facebook.com/shreyash.patodia
     github: https://github.com/ShreyashPatodia
     linkedin: https://www.linkedin.com/profile/view?id=AAIAABXT0_YBjQZYSvlGdwrOqhJB2-CulyG39Os&amp;trk=nav_responsive_tab_profile_pic
 yashkarnawat:
