Refactor author pages and add about section

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -1,6 +1,7 @@
 # Author details.
 thepulkitagarwal:
     name: Pulkit Agarwal
+    description: "Hi! I am Pulkit."
     avatar: /images/layout/photos/pulkit.png
     email: thepulkitagarwal@gmail.com
     twitter: https://twitter.com/thepulkit13
@@ -9,13 +10,15 @@ thepulkitagarwal:
     linkedin: in.linkedin.com/in/thepulkitagarwal
 shreyashpatodia:
     name: Shreyash Patodia
+    description: "I am Shreyash Patodia. I am 19 and I go to the <a href='https://www.unimelb.edu.au'>University of Melbourne</a>, in Melbourne duh !!"
     avatar: /images/layout/photos/shreyash.png
     email: patodiashreyash32@gmail.com
     facebook: https://www.facebook.com/shreyash.patodia
     github: https://github.com/ShreyashPatodia
-    linkedin: https://www.linkedin.com/profile/view?id=AAIAABXT0_YBjQZYSvlGdwrOqhJB2-CulyG39Os&amp;trk=nav_responsive_tab_profile_pic
+    linkedin: "https://www.linkedin.com/profile/view?id=AAIAABXT0_YBjQZYSvlGdwrOqhJB2-CulyG39Os&amp;trk=nav_responsive_tab_profile_pic"
 yashkarnawat:
     name: Yash Karnawat
+    description: "Hi! I am Yash."
     avatar: /images/layout/photos/yash.png
     github: https://github.com/yashkarnawat
-    linkedin: https://www.linkedin.com/profile/view?id=AAkAABXS-84BLuD2H47tqSxyfz_MexcsFs0lgF4&amp;authType=NAME_SEARCH&amp;authToken=-bts&amp;locale=en_US&amp;trk=tyah&amp;trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A366148558%2CauthType%3ANAME_SEARCH%2Cidx%3A1-1-1%2CtarId%3A1450154985796%2Ctas%3AYash%20K
+    linkedin: "https://www.linkedin.com/profile/view?id=AAkAABXS-84BLuD2H47tqSxyfz_MexcsFs0lgF4&amp;authType=NAME_SEARCH&amp;authToken=-bts&amp;locale=en_US&amp;trk=tyah&amp;trkInfo=clickedVertical%3Amynetwork%2CclickedEntityId%3A366148558%2CauthType%3ANAME_SEARCH%2Cidx%3A1-1-1%2CtarId%3A1450154985796%2Ctas%3AYash%20K"
