post:Video-Detection-Open-CV

--- a/_data/authors.yml
+++ b/_data/authors.yml
@@ -10,7 +10,7 @@ thepulkitagarwal:
     linkedin: in.linkedin.com/in/thepulkitagarwal
 shreyashpatodia:
     name: Shreyash Patodia
-    description: "I am Shreyash Patodia. I am 19 and I go to the <a href='https://www.unimelb.edu.au'>University of Melbourne</a>, in Melbourne duh !!"
+    description: "Hi! I am Shreyash."
     avatar: /images/layout/photos/shreyash.png
     email: patodiashreyash32@gmail.com
     facebook: https://www.facebook.com/shreyash.patodia
